--- a/FS001-Dashboard Design #01/index.html
+++ b/FS001-Dashboard Design #01/index.html
@@ -8,7 +8,56 @@
     <title>Responsive Dashboard Design #01 | Asmrprog</title>
 </head>
 <body>
+    <div class="container">
 
+        <aside class="left-section">
+            <div class="logo">
+                <button class="menu-btn" id="menu-close">
+                    <i class='bx bx-log-out-circle'></i>
+                </button>
+                <img src="assets/logo.png" alt="">
+                <a href="#">AsmgProg</a>
+            </div>
+
+            <div class="sidebar">
+                <div class="item" id="active">
+                    <i class='bx bx-home-alt-2' ></i>
+                    <a href="#">Overview</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-grid-alt' ></i>
+                    <a href="#">Course</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-folder' ></i>
+                    <a href="#">Resources</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-message-square-dots' ></i>
+                    <a href="#">Message</a>
+                </div>
+                <div class="item">
+                    <i class='bx bx-cog' ></i>
+                    <a href="#">Setting</a>
+                </div>
+            </div>
+
+            <div class="pic">
+                <img src="assets/pro.png" alt="">
+            </div>
+
+            <div class="upgrade">
+                <h5>Upgrade Your Plan</h5>
+                <div class="link">
+                    <a href="#">Go to <b>PRO</b></a>
+                    <i class='bx bx-chevron-right' ></i>
+                </div>
+            </div>
+        </aside>
+
+
+
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
