--- a/FS002-Business Agency/index.html
+++ b/FS002-Business Agency/index.html
@@ -319,6 +319,71 @@
                 </div>
             </section>
 
+            <!-- Feature -->
+            <section class="section feature" aria-labelledby="feature-label">
+                <div class="container">
+                    <figure class="feature-banner">
+                        <img src="./assets/images/feature-banner.png" width="800" height="531" alt="feature banner" loading="lazy" class="w-100">
+                    </figure>
+
+                    <div class="feature-content">
+                        <p class="section-subtitle" id="feature-label">Our Solutions</p>
+                        <h2 class="h2 section-title">
+                            We make your spending stress-free for you to have the perfect control.
+                        </h2>
+                        <p class="section-text">
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
+                        </p>
+                        <ul class="feature-list">
+                            <li>
+                                <div class="feature-card">
+                                    <div class="card-icon">
+                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                    </div>
+
+                                    <span class="span">
+                                        Aenean quam ornare. Curabitur blandit.
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="feature-card">
+                                    <div class="card-icon">
+                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                    </div>
+
+                                    <span class="span">
+                                        Nullam quis risus eget urna mollis ornare.
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="feature-card">
+                                    <div class="card-icon">
+                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                    </div>
+
+                                    <span class="span">
+                                        Etiam porta euismod malesuada mollis.
+                                    </span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="feature-card">
+                                    <div class="card-icon">
+                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                    </div>
+
+                                    <span class="span">
+                                        Vivamus sagittis lacus vel augue rutrum.
+                                    </span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </section>
         </article>
     </main>
 
