--- a/FS002-Business Agency/index.html
+++ b/FS002-Business Agency/index.html
@@ -609,7 +609,9 @@
                     Subscribe to our newsletter to get our news & deals delivered to you.
                 </p>
                 <form action="" class="input-wrapper">
-                    <label for=""></label><input type="email" name="email_address" placeholder="Email Address" required class="input-field">
+                    <label>
+                        <input type="email" name="email_address" placeholder="Email Address" required class="input-field">
+                    </label>
                     <button type="submit" class="submit-btn">Join</button>
                 </form>
             </div>
