--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -8,7 +8,27 @@
 </head>
 <body>
     <!-- Header -->
-
+    <header>
+        <a href="/" class="logo">Wedding</a>
+        <a href="#" class="menu"><ion-icon name="menu-outline"></ion-icon></a>
+        <ul class="nav">
+            <li>
+                <a href="#" class="nav-btn active">
+                    <ion-icon name="home-outline"></ion-icon>
+                </a>
+            </li>
+            <li><a href="#" class="nav-btn" data-target="about">About</a></li>
+            <li><a href="#" class="nav-btn" data-target="services">Services</a></li>
+            <li><a href="#" class="nav-btn" data-target="portfolio">Portfolio</a></li>
+            <li><a href="#" class="nav-btn" data-target="contact">Contact</a></li>
+        </ul>
+        <div class="search">
+            <label>
+                <input type="text" placeholder="Search">
+            </label>
+            <ion-icon name="search-outline"></ion-icon>
+        </div>
+    </header>
     <!-- Mobile Navigation -->
 
     <!-- Banner -->
@@ -22,6 +42,8 @@
     <!-- Contact Section -->
 
     <!-- JS vendors -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <!-- Customised javascript -->
     <script src="js/script.js"></script>
