--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="menu"><ion-icon name="menu-outline"></ion-icon></a>
         <ul class="nav">
             <li>
-                <a href="#" class="nav-btn active">
+                <a href="/" class="nav-btn active" onclick="resetHeader()">
                     <ion-icon name="home-outline"></ion-icon>
                 </a>
             </li>
@@ -140,7 +140,7 @@
                 </text>
             </svg>
 
-            <a href="#" class="move-down">
+            <a href="#" class="move-down" onclick="initNavigation()">
                 <ion-icon name="chevron-down-outline"></ion-icon>
             </a>
 
@@ -148,13 +148,29 @@
         
     </div>
 
-    <!-- About Section -->
+    <!-- ****** Main Start -->
+    <main>
+        <!-- About Section -->
+        <section class="about" id="about">
 
-    <!-- Services Section -->
+        </section>
 
-    <!-- Portfolio Section -->
+        <!-- Services Section -->
+        <section class="services" id="services">
 
-    <!-- Contact Section -->
+        </section>
+
+        <!-- Portfolio Section -->
+        <section class="portfolio" id="portfolio">
+
+        </section>
+
+        <!-- Contact Section -->
+        <section class="contact" id="contact">
+
+        </section>
+    </main>
+    <!-- ****** Main End -->
 
     <!-- JS vendors -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
