FS003 add About Section

--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -152,7 +152,42 @@
     <main>
         <!-- About Section -->
         <section class="about" id="about">
+            <div class="container">
+                <div class="row">
+                    <h1>About Us</h1>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="img-box">
+                            <img src="./images/about-1.jpg" alt="" class="img-fluid">
+                            <img src="./images/about-2.jpg" alt="" class="corner-img">
+                        </div>
+                    </div>
 
+                    <div class="col-lg-6">
+                        <img src="./images/bg-tree.png" alt="" class="section-bg-img">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                            asperiores, numquam totam quisquam corporis dolorem debitis iste
+                            architecto quas, expediate nemo. Repellat, quisquam temore. Ipsum
+                            dolor, porro iste nemo, beatae corrupti auisquam vero consequatur a
+                            harum maxime quibusdam ullam earum optio non quos quo cupiditate
+                            repellat odio culpa, consectetur est.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                            asperiores, numquam totam quisquam corporis dolorem debitis iste
+                            architecto quas, expediate nemo. Repellat, quisquam temore. Ipsum
+                            dolor, porro iste nemo, beatae corrupti auisquam vero consequatur a
+                            harum maxime quibusdam ullam earum optio non quos quo cupiditate
+                            repellat odio culpa, consectetur est.
+                        </p>
+                        <a href="#" class="section-btn">Discover more</a>
+                    </div>
+
+                </div>
+            </div>
         </section>
 
         <!-- Services Section -->
