FS003 add Services Section

--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -192,7 +192,73 @@
 
         <!-- Services Section -->
         <section class="services" id="services">
-
+            <div class="container">
+                <div class="row">
+                    <h1>Our Services</h1>
+                </div>
+                <div class="row d-flex justify-content-center align-items-center">
+                    <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                        <div class="services-card">
+                            <div class="img-box">
+                                <img src="./images/services-1.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <h4>Wedding Plan</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Saepe asperiores, numquam totam quisquam corporis dolorem
+                                    debitis iste architecto quas, expediate nemo. Repellat,
+                                    quisquam temore. Ipsum dolor, porro iste nemo, beatae
+                                    corrupti auisquam vero consequatur a harum maxime quibusdam
+                                    ullam earum optio non quos quo cupiditate repellat odio culpa,
+                                    consectetur est.
+                                </p>
+                                <a href="#" class="section-btn">Discover more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                        <div class="services-card">
+                            <div class="img-box">
+                                <img src="./images/services-2.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <h4>Ceremony</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Saepe asperiores, numquam totam quisquam corporis dolorem
+                                    debitis iste architecto quas, expediate nemo. Repellat,
+                                    quisquam temore. Ipsum dolor, porro iste nemo, beatae
+                                    corrupti auisquam vero consequatur a harum maxime quibusdam
+                                    ullam earum optio non quos quo cupiditate repellat odio culpa,
+                                    consectetur est.
+                                </p>
+                                <a href="#" class="section-btn">Discover more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                        <div class="services-card">
+                            <div class="img-box">
+                                <img src="./images/services-3.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <h4>Honeymoon</h4>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Saepe asperiores, numquam totam quisquam corporis dolorem
+                                    debitis iste architecto quas, expediate nemo. Repellat,
+                                    quisquam temore. Ipsum dolor, porro iste nemo, beatae
+                                    corrupti auisquam vero consequatur a harum maxime quibusdam
+                                    ullam earum optio non quos quo cupiditate repellat odio culpa,
+                                    consectetur est.
+                                </p>
+                                <a href="#" class="section-btn">Discover more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Portfolio Section -->
