FS003 add desc of services-card style

--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -198,6 +198,7 @@
                 </div>
                 <div class="row d-flex justify-content-center align-items-center">
                     <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                        <!-- 注意这里的样式名称 services-card 和视频教程中的 card 不一样，是因为发现有其他 名为 card 的样式有冲突 -->
                         <div class="services-card">
                             <div class="img-box">
                                 <img src="./images/services-1.jpg" alt="">
