--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -6,6 +6,7 @@
     <title>Wedding Agency Website | HTML, CSS, JS & Bootstrap</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 </head>
 <body>
     <!-- Header -->
@@ -264,7 +265,192 @@
 
         <!-- Portfolio Section -->
         <section class="portfolio" id="portfolio">
-
+            <div class="container">
+                <div class="row">
+                    <h1>Our Portfolio</h1>
+                </div>
+                <ul id="portfolio-filters" class="d-flex justify-content-center">
+                    <li data-filter="*" class="filter-active">All</li>
+                    <li data-filter=".filter-wedding">Wedding</li>
+                    <li data-filter=".filter-ceremony">Ceremony</li>
+                    <li data-filter=".filter-honeymoon">Honeymoon</li>
+                </ul>
+                
+                <div class="row portfolio-container">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-1.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 1</h4>
+                            <p>Wedding Planning</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-1.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Wedding Planning 1">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-honeymoon">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-2.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon 1</h4>
+                            <p>Honeymoon</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-2.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Honeymoon 1">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-3.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 2</h4>
+                            <p>Wedding Planning</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-3.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Wedding Planning 2">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ceremony">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-4.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremony 2</h4>
+                            <p>Ceremony</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-4.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Ceremony 2">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-honeymoon">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-5.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon 2</h4>
+                            <p>Honeymoon</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-5.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Honeymoon 2">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-6.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 3</h4>
+                            <p>Wedding Planning</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-6.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Wedding Planning 3">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ceremony">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-7.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremony 2</h4>
+                            <p>Ceremony</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-7.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Ceremony 2">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ceremony">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-8.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremony 3</h4>
+                            <p>Ceremony</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-8.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Ceremony 3">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-honeymoon">
+                        <div class="portfolio-img">
+                            <img class="img-fluid" src="./images/portfolio/portfolio-9.jpg" alt="">
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon 3</h4>
+                            <p>Honeymoon</p>
+                            <a
+                                    data-gallery="portfolioGallery"
+                                    href="./images/portfolio/portfolio-9.jpg"
+                                    class="portfolio-lightbox preview-link"
+                                    title="Honeymoon 3">
+                                <ion-icon name="add-outline"></ion-icon>
+                            </a>
+                            <a href="#" class="details-link" title="More Details">
+                                <ion-icon name="link-outline"></ion-icon>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         </section>
 
         <!-- Contact Section -->
@@ -278,8 +464,12 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
 
     <!-- Customised javascript -->
     <script src="js/script.js"></script>
+    <script src="js/isotope.js"></script>
+    <script src="js/glightbox.js"></script>
 </body>
 </html>
