--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -455,7 +455,68 @@
 
         <!-- Contact Section -->
         <section class="contact" id="contact">
+            <div class="container">
+                <div class="row">
+                    <h1>Contact Us</h1>
+                </div>
+                <!-- Insert you map here Google map embedment -->
+                <div>
+                    <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d391738.88399386517!2d115.8206976734375!3d39.90872019999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x36637698dc4374d9%3A0x6928cb83a148399a!2z5aSp5a6J6Zeo!5e0!3m2!1szh-CN!2stw!4v1713453889910!5m2!1szh-CN!2stw"
+                            style="border:0; width: 100%; height: 270px"
+                            allowfullscreen
+                            frameborder="0"
+                            loading="lazy">
+                    </iframe>
+                    <div class="row mt-5">
+                        <div class="col-lg-4">
+                            <div class="info">
+                                <div class="address">
+                                    <ion-icon name="location-outline"></ion-icon>
+                                    <h4>Location:</h4>
+                                    <p>Street Name, City Name, State, 123456</p>
+                                </div>
+                                <div class="email">
+                                    <ion-icon name="mail-outline"></ion-icon>
+                                    <h4>Email:</h4>
+                                    <p>info@example.com</p>
+                                </div>
+                                <div class="phone">
+                                    <ion-icon name="call-outline"></ion-icon>
+                                    <h4>Call:</h4>
+                                    <p>+1 2345 67890 66</p>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col-lg-8 mt-5 mt-lg-0">
+                            <form>
+                                <div class="row">
+                                    <div class="col-md-6 form-group">
+                                        <input type="text" class="form-control" placeholder="Your Name" required>
+                                    </div>
+
+                                    <div class="col-md-6 form-group mt-3 mt-md-0">
+                                        <input type="email" class="form-control" placeholder="Your Email" required>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group mt-3">
+                                    <input type="text" class="form-control" placeholder="Subject" required>
+                                </div>
+
+                                <div class="form-group mt-3">
+                                    <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required></textarea>
+                                </div>
+
+                                <div class="text-center">
+                                    <button type="submit">Send Message</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- ****** Main End -->
