--- a/FS003-Wedding Agency Website/index.html
+++ b/FS003-Wedding Agency Website/index.html
@@ -12,7 +12,10 @@
     <!-- Header -->
     <header>
         <a href="/" class="logo">Wedding</a>
-        <a href="#" class="menu"><ion-icon name="menu-outline"></ion-icon></a>
+        <a href="#" class="menu" onclick="toggleMenu()">
+            <ion-icon class="open" name="menu-outline"></ion-icon>
+            <ion-icon class="close" name="close-outline"></ion-icon>
+        </a>
         <ul class="nav">
             <li>
                 <a href="/" class="nav-btn active" onclick="resetHeader()">
@@ -32,6 +35,18 @@
         </div>
     </header>
     <!-- Mobile Navigation -->
+    <ul class="nav-mobile">
+        <li>
+            <a href="/" class="nav-btn active" onclick="resetHeader()">
+                <ion-icon name="home-outline"></ion-icon>
+            </a>
+        </li>
+        <li><a href="#" class="nav-btn" data-target="about">About</a></li>
+        <li><a href="#" class="nav-btn" data-target="services">Services</a></li>
+        <li><a href="#" class="nav-btn" data-target="portfolio">Portfolio</a></li>
+        <li><a href="#" class="nav-btn" data-target="contact">Contact</a></li>
+    </ul>
+
 
     <!-- Banner -->
     <div class="banner container-fluid">
