FS004 add banner layout with css grid

--- a/FS004-Profiles Website Landing Page/index.html
+++ b/FS004-Profiles Website Landing Page/index.html
@@ -3,11 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- It's better to keep external stylesheet above customized one, so that customized would cover external while style duplicated   -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Profiles Website Landing Page</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="banner">
+        <div class="item one">
+            <img src="./images/women-1.jpg" alt="">
+            <h4 class="name">
+                Marcela Sizzlewood
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item two">
+            <img src="./images/women-2.jpg" alt="">
+            <h4 class="name">
+                Pierre Culinaire
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item three">
+            <img src="./images/women-3.jpg" alt="">
+            <h4 class="name">
+                Isabella Flavori
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item four">
+            <h2 class="title">Creative Designers</h2>
+        </div>
+
+        <div class="item five">
+            <img src="./images/women-5.jpg" alt="">
+            <h4 class="name">
+                Gordon Gourmet
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item six">
+            <img src="./images/men-1.jpg" alt="">
+            <h4 class="name">
+                Sofia Spicecraft
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item seven">
+            <img src="./images/men-2.jpg" alt="">
+            <h4 class="name">
+                Vincent Vittles
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item eight">
+            <img src="./images/men-3.jpg" alt="">
+            <h4 class="name">
+                Amelia Aromatics
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+
+        <div class="item nine">
+            <img src="./images/men-4.jpg" alt="">
+            <h4 class="name">
+                Maxime Tasteton
+                <i class="bi bi-arrow-right-square"></i>
+            </h4>
+        </div>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
