FS004 add expand effect

--- a/FS004-Profiles Website Landing Page/index.html
+++ b/FS004-Profiles Website Landing Page/index.html
@@ -10,9 +10,15 @@
 </head>
 <body>
     <div class="banner">
+        <a href="#" class="close">
+            <i class="bi bi-x-circle-fill"></i>
+        </a>
         <div class="item one">
             <img src="./images/women-1.jpg" alt="">
-            <h4 class="name">
+            <p class="description one">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="one">
                 Marcela Sizzlewood
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -20,7 +26,10 @@
 
         <div class="item two">
             <img src="./images/women-2.jpg" alt="">
-            <h4 class="name">
+            <p class="description two">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="two">
                 Pierre Culinaire
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -28,7 +37,10 @@
 
         <div class="item three">
             <img src="./images/women-3.jpg" alt="">
-            <h4 class="name">
+            <p class="description three">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="three">
                 Isabella Flavori
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -40,7 +52,10 @@
 
         <div class="item five">
             <img src="./images/women-5.jpg" alt="">
-            <h4 class="name">
+            <p class="description five">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="five">
                 Gordon Gourmet
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -48,7 +63,10 @@
 
         <div class="item six">
             <img src="./images/men-1.jpg" alt="">
-            <h4 class="name">
+            <p class="description six">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="six">
                 Sofia Spicecraft
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -56,7 +74,10 @@
 
         <div class="item seven">
             <img src="./images/men-2.jpg" alt="">
-            <h4 class="name">
+            <p class="description seven">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="seven">
                 Vincent Vittles
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -64,7 +85,10 @@
 
         <div class="item eight">
             <img src="./images/men-3.jpg" alt="">
-            <h4 class="name">
+            <p class="description eight">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="eight">
                 Amelia Aromatics
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
@@ -72,7 +96,10 @@
 
         <div class="item nine">
             <img src="./images/men-4.jpg" alt="">
-            <h4 class="name">
+            <p class="description nine">
+                Lorem ipsum dolor sit amet. In facere sapiente 33 nemo obcaecati quo eligendi corporis eum ullam porro aut temporibus consequuntur ea excepturi cupiditate. Ut quidem molestiae non optio deleniti aut dolores laborum id atque beatae ex quod aliquam vel saepe autem qui consequatur delectus. Eos autem sequi et cupiditate saepe aut autem galisum sit tenetur aspernatur ut nemo facilis a excepturi quaerat est voluptates similique.
+            </p>
+            <h4 class="name" data-target="nine">
                 Maxime Tasteton
                 <i class="bi bi-arrow-right-square"></i>
             </h4>
