FS005 add header section

--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <!-- Header Section -->
+    <header id="header">
+        <a href="/" class="logo">Shop</a>
+        <ul class="nav">
+            <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">shopping</a></li>
+            <li><a href="#">contact us</a></li>
+        </ul>
+        <ul class="util">
+            <li><a href="#"><ion-icon name="search-outline"></ion-icon></a></li>
+            <li><a href=""><ion-icon name="person-outline"></ion-icon></a></li>
+            <li><a href=""><ion-icon name="heart-outline"></ion-icon></a></li>
+            <li>
+                <a href=""><ion-icon name="bag-outline"></ion-icon></a>
+                <span class="number">8</span>
+            </li>
+        </ul>
+    </header>
     <!-- Hero Banner Section -->
     <!-- Main Section -->
     <!-- Call Up Section -->
@@ -17,5 +35,8 @@
     <!-- Contact Section -->
     <!-- Footer Section -->
     <!-- Back to Top Button -->
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
