FS005 add call up section

--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -70,14 +70,53 @@
 
         <a href="#" class="reset" onclick="resetBanner()"><ion-icon name="power-outline"></ion-icon></a>
     </div>
+
     <!-- Main Section -->
-    <!-- Call Up Section -->
-    <!-- About Section -->
-    <!-- Products Section -->
-    <!-- Newsletter Signup Section -->
-    <!-- Contact Section -->
-    <!-- Footer Section -->
-    <!-- Back to Top Button -->
+    <main>
+        <!-- Call Up Section -->
+        <section class="call-up">
+            <div class="call-up-box">
+                <ion-icon name="send-outline"></ion-icon>
+                <div>
+                    <h4>Free Shipping</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque,
+                        facere.
+                    </p>
+                </div>
+            </div>
+
+            <div class="call-up-box">
+                <ion-icon name="card-outline"></ion-icon>
+                <div>
+                    <h4>Security Payment</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque,
+                        facere.
+                    </p>
+                </div>
+            </div>
+
+            <div class="call-up-box">
+                <ion-icon name="cash-outline"></ion-icon>
+                <div>
+                    <h4>14 Days Return</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque,
+                        facere.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <!-- Products Section -->
+        <!-- Newsletter Signup Section -->
+        <!-- Contact Section -->
+        <!-- Footer Section -->
+        <!-- Back to Top Button -->
+    </main>
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
