--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -110,6 +110,58 @@
         </section>
 
         <!-- About Section -->
+        <section class="about" id="about">
+            <div class="left">
+                <div class="promotion about-box">
+                    <img src="./images/sneaker-4.jpg" alt="">
+                    <div class="description">
+                        <h4>Promotion * Discount</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipsicing elit. Ipsam,
+                            iste.
+                        </p>
+                        <a href="#">Shop now <ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+                </div>
+                <div class="style about-box">
+                    <img src="./images/sunglasses-1.jpg" alt="">
+                    <div class="description">
+                        <h4>Trending Style</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipsicing elit. Ipsam,
+                            iste.
+                        </p>
+                        <a href="#">Shop now <ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="right">
+                <div class="collection about-box">
+                    <img src="./images/collection-1.jpg" alt="">
+                    <div class="description">
+                        <h4>Spring Collection</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipsicing elit. Ipsam,
+                            iste.
+                        </p>
+                        <a href="#">Shop now <ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+                </div>
+                <div class="discovery about-box">
+                    <img src="./images/fashion-1.jpg" alt="">
+                    <div class="description">
+                        <h4>Fashion Discovery</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipsicing elit. Ipsam,
+                            iste.
+                        </p>
+                        <a href="#">Shop now <ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Products Section -->
         <!-- Newsletter Signup Section -->
         <!-- Contact Section -->
