--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -428,6 +428,18 @@
         </section>
 
         <!-- Newsletter Signup Section -->
+        <section class="newsletter" id="newsletter">
+            <div class="newsletter-box">
+                <ion-icon name="mail-open-outline"></ion-icon>
+                <h4>Sign up for newsletter</h4>
+            </div>
+            <p>Seasonal discount from <span class="discount">20%</span> </p>
+            <form>
+                <input type="text" placeholder="Email"/>
+                <input type="submit"/>
+            </form>
+        </section>
+
         <!-- Contact Section -->
         <!-- Footer Section -->
         <!-- Back to Top Button -->
