--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -500,6 +500,24 @@
         </section>
 
         <!-- Footer Section -->
+        <footer>
+            <ul class="sci">
+                <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                <li><a href="#" class="share"><ion-icon name="share-social-outline"></ion-icon></a></li>
+            </ul>
+            <ul class="footer-nav">
+                <li><a href="#">store locations</a></li>
+                <li><a href="#">opening hours</a></li>
+                <li><a href="#">privacy terms</a></li>
+            </ul>
+            <div class="ask-us">
+                <p>Question?</p>
+                <a href="#" class="chat"><ion-icon name="chatbox-ellipses-outline"></ion-icon></a>
+            </div>
+        </footer>
+
         <!-- Back to Top Button -->
     </main>
 
