FS005 add back-to-top button

--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -12,9 +12,9 @@
         <a href="/" class="logo">Shop</a>
         <ul class="nav">
             <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">shopping</a></li>
-            <li><a href="#">contact us</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#products">shopping</a></li>
+            <li><a href="#contact">contact us</a></li>
         </ul>
         <ul class="util">
             <li><a href="#"><ion-icon name="search-outline"></ion-icon></a></li>
@@ -519,6 +519,10 @@
         </footer>
 
         <!-- Back to Top Button -->
+        <a href="#" class="back-to-top" onclick="scrollToTop()">
+            <ion-icon name="arrow-up-outline"></ion-icon>
+        </a>
+
     </main>
 
     <!-- Attention: the order of JS script is very important, they are not random -->
