FS008 add Header section

--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -7,7 +7,12 @@
     <title>McLEARN | Sports Car Website Landing Page</title>
 </head>
 <body>
-
+    <!-- Header -->
+    <header>
+        <span class="year">2018 - 2023</span>
+        <a href="/" class="logo"><img src="/images/logo.png" alt="logo"></a>
+        <a href="#" class="menu" onclick="toggleMenu()"></a>
+    </header>
     <script src="./js/script.js"></script>
 </body>
 </html>
