FS008 add navigation

--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -13,6 +13,16 @@
         <a href="/" class="logo"><img src="/images/logo.png" alt="logo"></a>
         <a href="#" class="menu" onclick="toggleMenu()"></a>
     </header>
+
+    <div class="banner">
+        <ul class="nav">
+            <li><a href="#">Supercars</a></li>
+            <li><a href="#">GT</a></li>
+            <li><a href="#">Ultimate</a></li>
+            <li><a href="#">Solus GT</a></li>
+            <li><a href="#">Legacy</a></li>
+        </ul>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
