FS008 add 1st background video

--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -22,6 +22,48 @@
             <li><a href="#">Solus GT</a></li>
             <li><a href="#">Legacy</a></li>
         </ul>
+        
+        <div class="bg-video-list">
+            <video
+                    class="bg-video mclaren-1 active"
+                    src="./assets/mclaren-1.mp4"
+                    autoplay
+                    loop
+                    muted
+            ></video>
+
+            <video
+                    class="bg-video mclaren-2"
+                    src="./assets/mclaren-2.mp4"
+                    autoplay
+                    loop
+                    muted
+            ></video>
+
+            <video
+                    class="bg-video mclaren-3"
+                    src="./assets/mclaren-3.mp4"
+                    autoplay
+                    loop
+                    muted
+            ></video>
+
+            <video
+                    class="bg-video mclaren-4"
+                    src="./assets/mclaren-4.mp4"
+                    autoplay
+                    loop
+                    muted
+            ></video>
+
+            <video
+                    class="bg-video mclaren-5"
+                    src="./assets/mclaren-5.mp4"
+                    autoplay
+                    loop
+                    muted
+            ></video>
+        </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
