FS008 change background and trailer videos

--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -155,23 +155,23 @@
 
         <div class="gallery">
             <div class="carousel">
-                <a class="carousel-item" href="#">
+                <a class="carousel-item" href="#" onclick="changeVideo('mclaren-1')">
                     <img src="./images/cars/mclaren-1.jpg" alt="">
                     <h4>765LT SPIDER</h4>
                 </a>
-                <a class="carousel-item" href="#">
+                <a class="carousel-item" href="#" onclick="changeVideo('mclaren-2')">
                     <img src="./images/cars/mclaren-2.jpg" alt="">
                     <h4 style="color: #92ff00">ARTURA</h4>
                 </a>
-                <a class="carousel-item" href="#">
+                <a class="carousel-item" href="#" onclick="changeVideo('mclaren-3')">
                     <img src="./images/cars/mclaren-3.jpeg" alt="">
                     <h4 style="color: #ff0015">750S</h4>
                 </a>
-                <a class="carousel-item" href="#">
+                <a class="carousel-item" href="#" onclick="changeVideo('mclaren-4')">
                     <img src="./images/cars/mclaren-4.jpeg" alt="">
                     <h4 style="color: #ff2e00">765LT</h4>
                 </a>
-                <a class="carousel-item" href="#">
+                <a class="carousel-item" href="#" onclick="changeVideo('mclaren-5')">
                     <img src="./images/cars/mclaren-5.jpeg" alt="">
                     <h4 style="color: #bbc0dd">750S SPIDER</h4>
                 </a>
