FS008 add Video Pause and Play Button

--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -80,6 +80,14 @@
             <a href="#">Enquire</a>
         </div>
 
+        <!-- Video Play and Pause Button -->
+        <a href="#" class="pause active" onclick="pauseVideo()">
+            <i class="bi bi-pause-circle"></i>
+        </a>
+        <a href="#" class="play" onclick="playVideo()">
+            <i class="bi bi-play-circle"></i>
+        </a>
+
         <div class="screen">
             <div class="shadow"></div>
             <div>
