--- a/FS015-Full Stack Book Store/frontend/index.html
+++ b/FS015-Full Stack Book Store/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- 因为文件保存在 public 目录下，所以不需要写出完整路径   -->
+    <link rel="icon" type="image/svg+xml" href="/fav-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Book Store App | MERN Stack Project</title>
   </head>
   <body>
     <div id="root"></div>
